[gd_scene load_steps=21 format=2]

[ext_resource path="res://Actual Assets/Recources/Shaders/outline.shader" type="Shader" id=1]
[ext_resource path="res://Actual Assets/Map/Puffer_bitmap.png" type="BitMap" id=2]
[ext_resource path="res://Actual Assets/Map/Moll_bitmap.png" type="BitMap" id=3]
[ext_resource path="res://Scenes/Objects/Back_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Manager/Shader_Manager.gd" type="Script" id=5]
[ext_resource path="res://Actual Assets/Map/Moll.png" type="Texture" id=6]
[ext_resource path="res://Actual Assets/Map/Puffer.png" type="Texture" id=7]
[ext_resource path="res://Actual Assets/Map/Land.png" type="Texture" id=8]
[ext_resource path="res://Actual Assets/Characters/Пухляш/Пухляш-all_2.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Buttons/Go_Scene_1.vs" type="Script" id=10]
[ext_resource path="res://Scripts/Manager/Change_Scene.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Menu/jsonValid.tscn" type="PackedScene" id=12]
[ext_resource path="res://Actual Assets/Map/Dandelions.png" type="Texture" id=13]
[ext_resource path="res://Actual Assets/Map/Dandelions_bitmap.png" type="BitMap" id=14]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

// Gonkee's fog shader for Godot 3 - full tutorial https://youtu.be/QEaTsz_0o44
// If you use this shader, I would prefer it if you gave credit to me and my channel

uniform vec3 color = vec3(0.35, 0.48, 0.95);
uniform int OCTAVES = 4;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(56, 78)) * 1000.0) * 1000.0);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);

	// 4 corners of a rectangle surrounding our point
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

float fbm(vec2 coord){
	float value = 0.0;
	float scale = 0.5;

	for(int i = 0; i < OCTAVES; i++){
		value += noise(coord) * scale;
		coord *= 2.0;
		scale *= 0.5;
	}
	return value;
}

void fragment() {
	vec2 coord = UV * 20.0;

	vec2 motion = vec2( fbm(coord + vec2(TIME * -0.5, TIME * 0.5)) );

	float final = fbm(coord + motion);

	COLOR = vec4(color, final * 0.5);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/color = Vector3( 1, 1, 1 )
shader_param/OCTAVES = 2

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 75, 1, 1 )
flag_disable_z = true
direction = Vector3( 50, 0, 0 )
gravity = Vector3( 30, 20, 0 )
angular_velocity = 193.85
angular_velocity_random = 0.34
orbit_velocity = 0.01
orbit_velocity_random = 0.76
tangential_accel = -1.92
tangential_accel_random = 0.33
angle = -55.4
angle_random = 0.22
scale = 4.0
scale_random = 1.0
color = Color( 0.815686, 0.623529, 0.160784, 1 )
hue_variation = 0.23
hue_variation_random = 0.57

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 1 )
shader_param/width = 8.0
shader_param/outline_color = Color( 1, 0.560784, 0, 1 )
shader_param/is_visible = false

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 1 )
shader_param/width = 16.0
shader_param/outline_color = Color( 1, 0.560784, 0, 1 )
shader_param/is_visible = false

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 1 )
shader_param/width = 16.0
shader_param/outline_color = Color( 1, 0.560784, 0, 1 )
shader_param/is_visible = false

[node name="Map_scene" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512.245, 300 )
scale = Vector2( 0.533589, 0.555556 )
texture = ExtResource( 8 )

[node name="Clouds" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_left = -3.0
margin_top = -347.0
margin_right = 1056.0
margin_bottom = 113.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaves" type="Particles2D" parent="."]
position = Vector2( 111.577, -20.5428 )
scale = Vector2( 4, 6 )
z_index = 1
amount = 18
lifetime = 4.0
randomness = 0.16
process_material = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Event_controll" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Back_button" parent="Event_controll" instance=ExtResource( 4 )]
margin_left = -3.16449
margin_top = -487.736
margin_right = -3.16449
margin_bottom = -487.736

[node name="Go_back" parent="Event_controll/Back_button" index="0"]
script = null

[node name="Moll" type="TextureButton" parent="Event_controll"]
material = SubResource( 4 )
margin_left = 826.487
margin_top = 456.54
margin_right = 1024.49
margin_bottom = 583.54
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_click_mask = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cave" type="TextureButton" parent="Event_controll"]
material = SubResource( 5 )
margin_top = 148.0
margin_right = 805.0
margin_bottom = 600.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_click_mask = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Dandelions" type="TextureButton" parent="Event_controll"]
material = SubResource( 6 )
margin_left = 152.0
margin_top = 222.0
margin_right = 871.0
margin_bottom = 575.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
texture_normal = ExtResource( 13 )
texture_click_mask = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Go_Scene_1" type="Button" parent="Event_controll"]
margin_left = 113.0
margin_top = 474.0
margin_right = 176.0
margin_bottom = 533.0
mouse_default_cursor_shape = 2
flat = true
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Event_controll/Go_Scene_1"]
position = Vector2( 32.7431, 28.6706 )
scale = Vector2( 1.51585, 1.51585 )
texture = ExtResource( 9 )
vframes = 2
hframes = 2

[node name="Validator" parent="." instance=ExtResource( 12 )]
[connection signal="pressed" from="Event_controll/Back_button/Go_back" to="Event_controll" method="_on_Go_back_pressed"]
[connection signal="mouse_entered" from="Event_controll/Moll" to="." method="_shader_entered" binds= [ "Moll" ]]
[connection signal="mouse_exited" from="Event_controll/Moll" to="." method="_shader_exited" binds= [ "Moll" ]]
[connection signal="pressed" from="Event_controll/Moll" to="Event_controll" method="_on_Moll_pressed"]
[connection signal="mouse_entered" from="Event_controll/Cave" to="." method="_shader_entered" binds= [ "Cave" ]]
[connection signal="mouse_exited" from="Event_controll/Cave" to="." method="_shader_exited" binds= [ "Cave" ]]
[connection signal="pressed" from="Event_controll/Cave" to="Event_controll" method="_on_Cave_pressed"]
[connection signal="mouse_entered" from="Event_controll/Dandelions" to="." method="_shader_entered" binds= [ "Dandelions" ]]
[connection signal="mouse_exited" from="Event_controll/Dandelions" to="." method="_shader_exited" binds= [ "Dandelions" ]]
[connection signal="pressed" from="Event_controll/Go_Scene_1" to="Event_controll/Go_Scene_1" method="_on_Go_Scene_1_pressed"]

[editable path="Event_controll/Back_button"]
